Server: Fix alignment on item-action-panel and item-status label

--- a/packages/flamenco/src/styles/_app_base.sass
+++ b/packages/flamenco/src/styles/_app_base.sass
@@ -177,7 +177,8 @@ nav.sidebar
 					font-family: $font-body
 					padding: 1px 5px
 					border-radius: 3px
-					width: 90%
+					width: 100%
+					margin-left: 3px
 
 .item-list-header
 	a
@@ -300,6 +301,9 @@ nav.sidebar
 
 	.btn
 		font-size: .8em
+
+	.item-log-load
+		margin-right: auto
 
 #item-log
 	margin: 10px
